--- a/Functions/Notify/package.json
+++ b/Functions/Notify/package.json
@@ -7,6 +7,6 @@
         "firebase-admin": "^12.0.0",
         "@google-cloud/firestore": "^7.1.0",
         "cors": "^2.8.5",
-        "node-mailjet": "6.0.5"
+        "@sendgrid/mail": "6.0.5"
     }
 }
